--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,7 @@ main{
 }
 
 .search-box{
-  min-width: 300px;
+  min-width: 250px;
   max-width: 400px;
   width: 100%;
   background-color: var(--dark-mode-text-and-light-mode-elements);
@@ -70,6 +70,7 @@ main{
 .search-box input{
   border: none;
   padding: 10px;
+  width: 100%;
 }
 
 
@@ -83,4 +84,15 @@ select[name="regions"]{
 
 select[name="regions"]:focus {
   outline:none;
+}
+
+
+.countries-galery{
+  margin-top: 50px;
+  display: grid;
+  gap: 40px;
+  justify-items: center;
+  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 350px));
+  justify-content: center;
 }
