--- a/src/style.css
+++ b/src/style.css
@@ -12,14 +12,13 @@
   --dark-mode-text-and-light-mode-elements: hsl(0, 0%, 100%);
 }
 
-body{
-  font-family: 'Nunito Sans', sans-serif;
+html{
   font-size: 14px;
-  background-color: var(--light-mode-background-color);
 }
 
-.inactive{
-  display: none;
+body{
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: var(--light-mode-background-color);
 }
 
 header{
@@ -33,7 +32,7 @@ header{
 }
 
 header h1{
-  font-size: inherit;
+  font-size: 1rem;
 }
 
 main{
@@ -47,6 +46,7 @@ main{
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 .search-box{
@@ -58,13 +58,14 @@ main{
   display: flex;
   align-items: center;
   padding: 10px 30px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   margin-right: 50px;
 }
 
 .search-box img{
   width: 20px;
   margin-right: 25px;
+  cursor: pointer;
 }
 
 .search-box input{
@@ -88,11 +89,65 @@ select[name="regions"]:focus {
 
 
 .countries-galery{
-  margin-top: 50px;
   display: grid;
   gap: 40px;
   justify-items: center;
   align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(300px, 350px));
   justify-content: center;
+  padding-bottom: 80px;
+}
+
+.country-detail-container{
+  padding-bottom: 80px;
+}
+
+.inactive{
+  display: none;
+}
+
+
+@media (min-width:600px) {
+  header{
+    padding: 35px 50px;
+  }
+  main{
+    padding: 0 50px;
+  }
+  .country-detail-container{
+    padding: 0 50px 80px 50px;
+  }
+}
+@media (min-width:728px) {
+  .search-box{
+    margin-bottom: 0;
+  }
+}
+@media (min-width:800px) {
+  .country-detail-container{
+    padding: 0 100px 80px 100px;
+  }
+}
+@media (min-width:900px) {
+  .country-detail-container{
+    padding: 0 180px 80px 180px;
+  }
+}
+@media (min-width:1090px) {
+  .country-detail-container{
+    padding: 0 0 80px 0;
+  }
+}
+@media (min-width:1200px) {
+  header{
+    padding: 20px 100px;
+  }
+  main{
+    padding: 0 100px;
+  }
+}
+@media (min-width:1300px) {
+  html{
+    font-size: 16px;
+  }
 }
