--- a/src/style.css
+++ b/src/style.css
@@ -2,27 +2,30 @@
 @import url('./css/reset.css');
 @import url('./css/slider.css');
 
-:root{
-  --dark-mode-elements-color: hsl(209, 23%, 22%);
-  --dark-mode-background-color: hsl(207, 26%, 17%);
-  --light-mode-text-color: hsl(200, 15%, 8%);
-  --light-mode-background-color: hsl(0, 0%, 98%);
-  --light-mode-input: hsl(0, 0%, 52%);
-  --dark-mode-text-and-light-mode-elements: hsl(0, 0%, 100%);
+/* :root{
+  --text-color: hsl(200, 15%, 8%);
+  --background-color: hsl(0, 0%, 98%);
+  --elements-color: hsl(0, 0%, 100%);
+  --input: hsl(0, 0%, 52%);
+} */
+
+*{
+  color: var(--text-color);
 }
+
 html{
   font-size: 14px;
 }
 body{
   font-family: 'Nunito Sans', sans-serif;
-  background-color: var(--light-mode-background-color);
+  background-color: var(--background-color);
 }
 header{
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 35px 25px;
-  background-color: var(--dark-mode-text-and-light-mode-elements);
+  background-color: var(--elements-color);
   margin-bottom: 35px;
   box-shadow: 1px 3px 6px 0px rgba(115, 115, 115, 0.15);
 }
@@ -37,10 +40,12 @@ main{
 .back-btn{
   display: flex;
   cursor: pointer;
-  background-color: var(--dark-mode-text-and-light-mode-elements);
+  background-color: var(--elements-color);
   box-shadow: 1px 3px 6px 2px rgba(115, 115, 115, 0.15);
   padding: 8px 30px;
   border-radius: 8px;
+  margin-bottom: 20px;
+  margin-right: 50px;
 }
 .back-btn img{
   width: 15px;
@@ -64,7 +69,7 @@ main{
   min-width: 250px;
   max-width: 400px;
   width: 100%;
-  background-color: var(--dark-mode-text-and-light-mode-elements);
+  background-color: var(--elements-color);
   box-shadow: 1px 3px 6px 0px rgba(115, 115, 115, 0.15);
   display: flex;
   align-items: center;
@@ -82,12 +87,13 @@ main{
   border: none;
   padding: 10px;
   width: 100%;
+  background-color: transparent;
 }
 
 /* Regions selector */
 select[name="regions"]{
   border: none;
-  background-color: var(--dark-mode-text-and-light-mode-elements);
+  background-color: var(--elements-color);
   box-shadow: 1px 3px 6px 0px rgba(115, 115, 115, 0.15);
   padding: 20px 30px;
   border-radius: 8px;
@@ -126,13 +132,16 @@ select[name="regions"]:focus {
   }
 }
 @media (min-width:728px) {
-  .search-box{
+  .search-box, .back-btn{
     margin-bottom: 0;
   }
 }
 @media (min-width:800px) {
   .country-detail-container{
     padding: 0 100px 80px 100px;
+  }
+  .search-box{
+    margin: 0;
   }
 }
 @media (min-width:900px) {
