termine con la api de cargar paises y los detalles de cada país

--- a/src/style.css
+++ b/src/style.css
@@ -103,7 +103,7 @@ select[name="regions"]:focus {
 }
 
 /* Others */
-.countries-galery{
+.countries-gallery{
   display: grid;
   gap: 40px;
   justify-items: center;
