--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -30,7 +30,7 @@ dark-mode-toggle.slider::part(toggleLabel)::before {
   content: "";
   background-position: center;
   background-size: var(--dark-mode-toggle-icon-icon-size, 1rem);
-  background-image: var(--dark-mode-toggle-icon-light-icon, url("sun.svg"));
+  background-image: var(--dark-mode-toggle-icon-light-icon, url("/sun.svg"));
   box-sizing: border-box;
 }
 
@@ -44,7 +44,7 @@ dark-mode-toggle.slider[mode="dark"]::part(toggleLabel)::before {
   background-color: #ccc;
   color: #000;
   background-size: var(--dark-mode-toggle-icon-size, 1rem);
-  background-image: var(--dark-mode-toggle-dark-icon, url("moon.svg"));
+  background-image: var(--dark-mode-toggle-dark-icon, url("/moon.svg"));
   filter: var(--dark-mode-toggle-icon-filter, invert(100%));
   box-shadow: 0 0.5px hsl(0deg 0% 100% / 16%);
 }
@@ -63,7 +63,7 @@ dark-mode-toggle.slider::part(toggleLabel)::after {
   content: "";
   background-position: center;
   background-size: var(--dark-mode-toggle-icon-size, 1rem);
-  background-image: var(--dark-mode-toggle-dark-icon, url("moon.svg"));
+  background-image: var(--dark-mode-toggle-dark-icon, url("/moon.svg"));
   background-repeat: no-repeat;
   box-sizing: border-box;
   opacity: 0.5;
@@ -71,6 +71,6 @@ dark-mode-toggle.slider::part(toggleLabel)::after {
 
 dark-mode-toggle.slider[mode="dark"]::part(toggleLabel)::after {
   left: calc(var(--dark-mode-toggle-icon-size, 1rem) * 0.25);
-  background-image: var(--dark-mode-toggle-light-icon, url("sun.svg"));
+  background-image: var(--dark-mode-toggle-light-icon, url("/sun.svg"));
   filter: var(--dark-mode-toggle-icon-filter, invert(100%));
 }
